chang the padding

--- a/index.html
+++ b/index.html
@@ -757,8 +757,8 @@
             District Info
           </h2>
           <ul class="menu-without-icon">
-            <li> <a href=""> Home</a></li>
-            <li><a href=""> Board of Education </a></li>
+            <li> <a  href="javascript:void(0)"> Home</a></li>
+            <li><a  href="javascript:void(0)"> Board of Education </a></li>
           </ul>
         </li>
         <li class="footer-link more-link">
