change  link color

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
     </div>
-    <div class="bottem-nav">
+    <div class="bottom-nav">
       <div class="container">
         <nav>
           <div class="mainlogo">
@@ -94,11 +94,11 @@
             <ul class="main-nav" >
               <li class="menu-link"><a href="javascript:void(0)" class="active">Home</a></li>
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">Schools
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">Schools
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -107,11 +107,11 @@
               </li>
 
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">District Info
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">District Info
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -123,11 +123,11 @@
               </li>
 
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">Education Services
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">Education Services
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -135,11 +135,11 @@
                 </div>
               </li>
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">Athletics
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">Athletics
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -147,11 +147,11 @@
                 </div>
               </li>
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">More
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">More
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -166,10 +166,7 @@
                   </div>
                 </a>
               </li>
-
             </ul>
-
-
         </nav>
       </div>
     </div>
