change  link color

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"
+    integrity="sha512-6kvhZ/39gRVLmoM/6JxbbJVTYzL/gnbDVsHACLx/31IREU4l3sI7yeO0d4gw8xU5Mpmm/17LMaDHOCf+TvuC2Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    
   <link rel="icon" type="image/png" href="images/hw-logo-glyph_svg.png">
 
 
@@ -71,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="bottom-nav">
+    <div class="bottem-nav">
       <div class="container">
         <nav>
           <div class="mainlogo">
@@ -94,11 +99,11 @@
             <ul class="main-nav" >
               <li class="menu-link"><a href="javascript:void(0)" class="active">Home</a></li>
               <li class="menu-link">
-                <div class="bottom-nav-dropdown">
-                  <button class="bottom-nav-dropbtn">Schools
+                <div class="bottem-nav-dropdown">
+                  <button class="bottem-nav-dropbtn">Schools
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottom-nav-dropdown-content">
+                  <div class="bottem-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -107,11 +112,11 @@
               </li>
 
               <li class="menu-link">
-                <div class="bottom-nav-dropdown">
-                  <button class="bottom-nav-dropbtn">District Info
+                <div class="bottem-nav-dropdown">
+                  <button class="bottem-nav-dropbtn">District Info
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottom-nav-dropdown-content">
+                  <div class="bottem-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -123,11 +128,11 @@
               </li>
 
               <li class="menu-link">
-                <div class="bottom-nav-dropdown">
-                  <button class="bottom-nav-dropbtn">Education Services
+                <div class="bottem-nav-dropdown">
+                  <button class="bottem-nav-dropbtn">Education Services
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottom-nav-dropdown-content">
+                  <div class="bottem-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -135,11 +140,11 @@
                 </div>
               </li>
               <li class="menu-link">
-                <div class="bottom-nav-dropdown">
-                  <button class="bottom-nav-dropbtn">Athletics
+                <div class="bottem-nav-dropdown">
+                  <button class="bottem-nav-dropbtn">Athletics
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottom-nav-dropdown-content">
+                  <div class="bottem-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -147,11 +152,11 @@
                 </div>
               </li>
               <li class="menu-link">
-                <div class="bottom-nav-dropdown">
-                  <button class="bottom-nav-dropbtn">More
+                <div class="bottem-nav-dropdown">
+                  <button class="bottem-nav-dropbtn">More
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottom-nav-dropdown-content">
+                  <div class="bottem-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -166,7 +171,10 @@
                   </div>
                 </a>
               </li>
+
             </ul>
+
+
         </nav>
       </div>
     </div>
