--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="bottem-nav">
+    <div class="bottom-nav">
       <div class="container">
         <nav>
           <div class="mainlogo">
@@ -99,11 +99,11 @@
             <ul class="main-nav" >
               <li class="menu-link"><a href="javascript:void(0)" class="active">Home</a></li>
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">Schools
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">Schools
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -112,11 +112,11 @@
               </li>
 
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">District Info
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">District Info
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -128,11 +128,11 @@
               </li>
 
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">Education Services
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">Education Services
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -140,11 +140,11 @@
                 </div>
               </li>
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">Athletics
+                <div class="bottom-nav-dropdown">
+                  <button class="bottom-nav-dropbtn">Athletics
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
@@ -152,11 +152,11 @@
                 </div>
               </li>
               <li class="menu-link">
-                <div class="bottem-nav-dropdown">
-                  <button class="bottem-nav-dropbtn">More
+                <div class="bottom-nav-dropdown">
+                  <button class="bottem-nov-dropbtn">More
                     <span class="icon-drop-down"></span>
                   </button>
-                  <div class="bottem-nav-dropdown-content">
+                  <div class="bottom-nav-dropdown-content">
                     <a href="javascript:void(0)">Link 1</a>
                     <a href="javascript:void(0)">Link 2</a>
                     <a href="javascript:void(0)">Link 3</a>
