change  link color

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </li>
               <li class="menu-link">
                 <div class="bottom-nav-dropdown">
-                  <button class="bottem-nov-dropbtn">More
+                  <button class="bottom-nav-dropbtn">More
                     <span class="icon-drop-down"></span>
                   </button>
                   <div class="bottom-nav-dropdown-content">
