change  link color

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
     </section>
     <section class="progress-bar-section">
       <div class="container">
-        <div class="progrssbar-heading text-center">
+        <div class="progressbar-heading text-center">
           <h2>Lorem Ipsum Dolar</h2>
           <p>
             Torquem detraxit hosti et quidem faciunt, ut et negent satis esse appetendum, alterum. Si sine causa? quae fuerit causa, mox videro; interea hoc epicurus in liberos.
