change  link color

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                       </div>
                       <div class="card-details">
                         <h4 class="card-name">Harrison Phillips</h4>
-                        <p class="card-status">Verified Graduate</p>
+                        <p class="card-status">Lorem ipsum</p>
                       </div>
                     </div>
                     <card class="card-text">
@@ -503,7 +503,7 @@
                       </div>
                       <div class="card-details">
                         <h4 class="card-name">Ainara Vergara</h4>
-                        <p>Verified Graduate</p>
+                        <p>Lorem ipsum</p>
                       </div>
                     </div>
                     <card class="card-text">
@@ -524,7 +524,7 @@
                       </div>
                       <div class="card-details">
                         <h4 class="card-name"> Niek Bove </h4>
-                        <p class="card-status">Verified Graduate</p>
+                        <p class="card-status">Lorem ipsum</p>
                       </div>
                     </div>
                     <card class="card-text">
@@ -545,7 +545,7 @@
                       </div>
                       <div class="card-details">
                         <h4 class="card-name">Ainara Vergara</h4>
-                        <p>Verified Graduate</p>
+                        <p>Lorem ipsum</p>
                       </div>
                     </div>
                     <card class="card-text">
