change  link color

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <nav>
           <div class="mainlogo">
             <h2>
-              <a href="javascript:void(0);">
+              <a href="">
                 <span><img src="images/hw-logo-glyph_svg.png" alt="logo"></span>
                 <span class="heading">HW SCHOOL DISTRICT</span>
               </a>
@@ -95,7 +95,7 @@
           <div class="navigation">
 
             <ul class="main-nav" >
-              <li class="menu-link"><a href="javascript:void(0)" class="active">Home</a></li>
+              <li class="menu-link"><a href="" class="active">Home</a></li>
               <li class="menu-link">
                 <div class="bottom-nav-dropdown">
                   <button class="bottom-nav-dropbtn">Schools
