change color link

--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
             More
           </h2>
           <ul class="menu-without-icon">
-            <li><a href="javascript:void(0)">menu</a></li>
+            <li><a href="javascript:void(0)">Menu</a></li>
             <li><a href="javascript:void(0)">Illuminate Education</a></li>
             <li><a href="javascript:void(0)">MI Star Parents</a></li>
             <li><a href="javascript:void(0)">MI Star Students</a></li>
